common/src/snapshots/common__game__tests__game_setup_and_round_end-2.snap
---
source: common/src/game.rs
expression: game
---
setup_game_options:
  rounds: 5
  deterministic: true
secret_key: mysecretkey
players:
  p2:
    id: p2
    encrypted_hand: "[encrypted_hand]"
    num_cards: 0
    role: Player
  p1:
    id: p1
    encrypted_hand: "[encrypted_hand]"
    num_cards: 0
    role: Leader
curr_round: 2
trump: diamond
player_order:
  - p2
  - p1
curr_played_cards: []
curr_player_turn: p2
curr_winning_card: ~
curr_dealer: p1
bids: {}
bid_order: []
wins:
  p2: 0
  p1: 0
score:
  p2: 10
  p1: 0
gameplay_state: Bid
event_log:
  - "[event_log]"
  - "[event_log]"
  - "[event_log]"
  - "[event_log]"
  - "[event_log]"
  - "[event_log]"
system_status: []
