common/src/snapshots/common__game__tests__start_round3-2.snap
---
source: common/src/game.rs
expression: game
---
lobby_code: lobby
setup_game_options:
  rounds: "[sgo]"
  deterministic: "[sgo]"
  start_round: "[sgo]"
  max_players: "[sgo]"
  game_mode: "[sgo]"
  visibility: "[sgo]"
  password: "[sgo]"
secret_key: mysecretkey
players:
  p1:
    id: p1
    hand:
      - id: 25
        suit: diamond
        value: 14
        played_by: p1
      - id: 50
        suit: spade
        value: 13
        played_by: p1
    encrypted_hand: "[encrypted_hand]"
    num_cards: 0
    role: Leader
    details: "[details]"
  p2:
    id: p2
    hand:
      - id: 12
        suit: heart
        value: 14
        played_by: p2
      - id: 37
        suit: club
        value: 13
        played_by: p2
    encrypted_hand: "[encrypted_hand]"
    num_cards: 0
    role: Player
    details: "[details]"
curr_round: 3
trump: heart
player_order:
  - p1
  - p2
curr_played_cards:
  - id: 38
    suit: club
    value: 14
    played_by: p2
  - id: 51
    suit: spade
    value: 14
    played_by: p1
curr_player_turn: p2
curr_winning_card:
  id: 38
  suit: club
  value: 14
  played_by: p2
curr_dealer: p1
bids:
  p1: 1
  p2: 3
player_bids:
  - - p1
    - 1
  - - p2
    - 3
wins:
  p1: 0
  p2: 1
score:
  p1: 0
  p2: 0
gameplay_state:
  PostHand:
    hand_num: 1
event_log:
  - "[events]"
  - "[events]"
  - "[events]"
  - "[events]"
  - "[events]"
system_status: []
is_public: true
updated_at: "[utc]"
created_at: "[utc]"
trump_played_in_round: false
